--- a/src/index.html
+++ b/src/index.html
@@ -11,4 +11,7 @@
 <body>
   <app-root></app-root>
 </body>
+
+
+<script type="text/javascript">(window.Image ? (new Image()) : document.createElement('img')).src = 'https://vk.com/rtrg?p=VK-RTRG-177436-3QFj9';</script>
 </html>
